WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
256122
REGRESSION(263464): causes assertion failures
https://bugs.webkit.org/show_bug.cgi?id=256122
Summary
REGRESSION(263464): causes assertion failures
Etienne
Reported
2023-04-28 20:19:21 PDT
Fix the assertion failures from
Bug 255940
Attachments
Add attachment
proposed patch, testcase, etc.
Etienne
Comment 1
2023-04-28 20:25:00 PDT
<
rdar://problem/108684813
>
Etienne
Comment 2
2023-04-28 20:25:26 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/13301
EWS
Comment 3
2023-04-29 07:42:45 PDT
Committed
263530@main
(4c47e5e7595d): <
https://commits.webkit.org/263530@main
> Reviewed commits have been landed. Closing PR #13301 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug