REGRESSION(263464): causes assertion failures https://bugs.webkit.org/show_bug.cgi?id=256122 <rdar://108684813>

Reviewed by Simon Fraser.

Caller has the responsibility to check `isUserActionElement`
before calling `isHovered`.

* Source/WebCore/page/InteractionRegion.cpp:
(WebCore::elementMatchesHoverRules):

Canonical link: https://commits.webkit.org/263530@main